# screen-chat

./: .gitignore  README.md  ScreenOCR.sln  build_appimage.sh  main.py  pyproject.toml  run_app.py  screenchat.desktop  screenchat.spec
ScreenOCR/: App.xaml  App.xaml.cs  AppSettings.cs  GeminiApiClient.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeHotkey.cs  NotificationWindow.xaml  NotificationWindow.xaml.cs  PromptDialog.xaml  PromptDialog.xaml.cs  ResultsWindow.xaml  ResultsWindow.xaml.cs  ScreenOCR.csproj  ScreenshotOverlay.xaml  ScreenshotOverlay.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  ToastNotification.cs
ScreenOCR/Resources/: ComboBoxStyles.xaml
src/screenchat/: __init__.py  main.py
src/screenchat/adapters/: __init__.py  autostart.py  gemini_ocr.py  json_config.py  pyperclip_clipboard.py  shortcut.py  wayland_screenshot.py
src/screenchat/application/: __init__.py  use_cases.py
src/screenchat/core/: config.py  gemini.py  ipc.py  wayland.py
src/screenchat/domain/: __init__.py  interfaces.py  models.py
src/screenchat/ui/: __init__.py  base_dialog.py  controller.py  review.py  settings.py  style.qss  toast.py  tray.py
