[project]
name = "screen-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyperclip>=1.11.0",
    "pyqt6>=6.11.0",
]
[project.scripts]
screenchat = "screenchat.main:main"

[tool.uv]
package = true
